# vkMpm

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  run_clang_format.sh
.github/workflows/: android.yml  main.yml
android/: .gitignore  CMakeLists.txt  build.gradle  conanfile.txt  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/particle/: build.gradle
android/particle/src/main/: AndroidManifest.xml
android/particle/src/main/cpp/: particle.cpp
android/particle/src/main/res/values/: strings.xml
app/: particle.cpp
assets/shaders/: clear_grid.comp  grid_to_particle.comp  particle.frag  particle.vert  particle_to_grid.comp  update_grid.comp
cmake/scripts/: embed-data.cmake
cmake/tools/: compile-shader.cmake  guards.cmake  libcpp.cmake  sanitizer.cmake  warnings.cmake
include/: ParticleSystem.hpp
include/Compute/: ComputeCommandBuffer.hpp  ComputeDescriptorSets.hpp  ComputePipeline.hpp  MPMStorageBuffer.hpp
include/Graphic/: GraphicCommandBuffers.hpp  GraphicDescriptorSets.hpp  GraphicGraphicsPipeline.hpp  GraphicRenderPass.hpp
include/struct/: Cell.hpp  ComputeParticle.hpp  MVP.hpp  Particle.hpp  ParticleMVP.hpp
src/: ParticleSystem.cpp
src/Compute/: ComputeCommandBuffer.cpp  ComputeDescriptorSets.cpp  ComputePipeline.cpp
src/Graphic/: GraphicCommandBuffers.cpp  GraphicDescriptorSets.cpp  GraphicGraphicsPipeline.cpp  GraphicRenderPass.cpp
